--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "startdev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.3",
     "connect-multiparty": "^2.2.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
