--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongodb": "^3.5.9",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
+    "node-geocoder": "^3.27.0",
     "pug": "2.0.0-beta11"
   }
 }
