--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST="127.0.0.1"
-DB_USER="root"
-DB_PASSWORD=""
-DB_DATABASE="bd"
-DB_PORT=3306
-SECRET_KEY="aujourd'hui, maman est morte"
+DB_HOST = "eu-cdbr-west-03.cleardb.net"
+DB_USER = "b0959d31f3f6b0"
+DB_PASSWORD = "8fd78e7d"
+DB_DATABASE = "heroku_2d81ea69f11382b"
+DB_PORT = 3306;
+SECRET_KEY = "aujourd'hui, maman est morte"
